# snapmaster-docs

./: .pre-commit-config.yaml  README.md  mkdocs.yml  netlify.toml  pyproject.toml
docs/: index.md  oss.md
docs/cli/: getting-started.md
docs/getting-started/: introduction.md  logging-in-first-time.md
