[tool.poetry]
name = "snapmaster-docs"
version = "0.1.0"
description = "Documentation for SnapMaster"
authors = ["Omri Gazitt <ogazitt@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
